--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resim Yayınlama</title>
+    <title>su an da bu websıtesıne bakıyorsunuz</title>
 </head>
 <body>
-    <h1>Resim Yayınlama</h1>
+    <h1>su anda bu websıtesıne bakıyorsunuz</h1>
     <img src="resim.jpg" alt="Açıklayıcı Resim" width="500" height="auto">
 </body>
 </html>
